# Fast_API_Tutorial

./: main.py  pyproject.toml
FirstStep/: EmployeeData.py  EmployeeName.py  Enum.md  Enum_pract.ipynb  Item.py  Student.py  WSGI_VS_ASGI.md  main.py
