[project]
name = "fast-api-learning-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "ipykernel>=7.3.0",
    "uvicorn>=0.49.0",
]

[tool.fastapi]
entrypoint="FirstStep.main:app"
